--- a/fhir_converter/templates/json/ExamplePatient.liquid
+++ b/fhir_converter/templates/json/ExamplePatient.liquid
@@ -16,7 +16,7 @@
             "value": "{{ msg.MRN }}"
         }
     ],
-    "active": 'true',
+    "active": true,
     "name": [
         {
             "family": "{{ msg.LastName }}",
