--- a/fhir_converter/templates/json/ExampleResults.liquid
+++ b/fhir_converter/templates/json/ExampleResults.liquid
@@ -16,7 +16,7 @@
         "subject": {
           "reference": "Patient/{{ result.Results[0].ProviderId.Value }}"
         },
-        "authoredOn": "{% if result.OrderDate %}{{ result.OrderDate |  format_date_time }}{% endif %}",
+        "authoredOn": "{% if result.OrderDate %}{{ result.OrderDate | format_date_time }}{% endif %}",
         "occurrenceDateTime": "{% if result.CollectedDate %}{{ result.CollectedDate | format_date_time }}{% endif %}",
         "orderDetail": [
           {
@@ -25,6 +25,43 @@
               "date": "{% if result.OrderDatePart.Date %}{{ result.OrderDatePart.Date | format_date_time }}{% endif %}"
             }
           }
+        ],
+        "result": [
+          {% for observation in result.Results %}
+          {
+            "resource": {
+              "resourceType": "Observation",
+              "id": "{{ observation.Id.Value }}",
+              "code": {
+                "text": "{{ observation.Name }}"
+              },
+              "valueQuantity": {
+                "value": {% if observation.Measurement.HasNumericValue %}{{ observation.Measurement.NumericValue }}{% else %}null{% endif %},
+                "unit": "{% if observation.Measurement.Units %}{{ observation.Measurement.Units }}{% else %}see details{% endif %}",
+                "system": "{{ observation.Measurement.MeasurementSystem }}",
+                "code": "{{ observation.Measurement.Value }}"
+              },
+              "interpretation": [
+                {% if observation.IsAbnormal %}
+                {
+                  "coding": [
+                    {
+                      "system": "http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation",
+                      "code": "A",
+                      "display": "Abnormal"
+                    }
+                  ]
+                }
+                {% endif %}
+              ],
+              "referenceRange": [
+                {
+                  "text": "{{ observation.NormalRange }}"
+                }
+              ]
+            }
+          }{% unless forloop.last %},{% endunless %}
+          {% endfor %}
         ]
       }
     }{% unless forloop.last %},{% endunless %}
