--- a/fhir_converter/templates/json/ExampleResults.liquid
+++ b/fhir_converter/templates/json/ExampleResults.liquid
@@ -5,6 +5,7 @@
     {% for result in msg.Results %}
     {% if result.TypeName == "Order" %}
     {
+      "fullUrl": "urn:uuid:{{ result.Id.Value }}", 
       "resource": {
         "resourceType": "ServiceRequest",
         "id": "{{ result.Id.Value }}",
@@ -17,83 +18,76 @@
           "reference": "Patient/{{ result.Results[0].ProviderId.Value }}"
         },
         "authoredOn": "{% if result.OrderDate %}{{ result.OrderDate | format_ts_as_date_time }}{% endif %}",
-        "occurrenceDateTime": "{% if result.CollectedDate %}{{ result.CollectedDate | format_ts_as_date_time }}{% endif %}",
-        "orderDetail": [
+        "occurrenceDateTime": "{% if result.CollectedDate %}{{ result.CollectedDate | format_ts_as_date_time }}{% endif %}"
+      }
+    }, 
+    {% for observation in result.Results %}
+    {% if observation.TypeName == "Result" %}
+    {
+      "fullUrl": "urn:uuid:{{ observation.Id.Value }}",
+      "resource": {
+        "resourceType": "Observation",
+        "id": "{{ observation.Id.Value }}",
+        "code": {
+          "text": "{{ observation.Name }}"
+        },
+        "subject": {
+          "reference": "Patient/{{ result.Results[0].ProviderId.Value }}"
+        },
+        "valueQuantity": {
+          "value": {% if observation.Measurement.HasNumericValue %}{{ observation.Measurement.NumericValue }}{% else %}null{% endif %},
+          "unit": "{% if observation.Measurement.Units %}{{ observation.Measurement.Units }}{% else %}see details{% endif %}",
+          "system": "{{ observation.Measurement.MeasurementSystem }}",
+          "code": "{{ observation.Measurement.Value }}"
+        },
+        "interpretation": [
+          {% if observation.IsAbnormal %}
           {
-            "timing": {
-              "dateTime": "{% if result.OrderDatePart.DateTime %}{{ result.OrderDatePart.DateTime | format_ts_as_date_time }}{% endif %}",
-              "date": "{% if result.OrderDatePart.Date %}{{ result.OrderDatePart.Date | format_ts_as_date_time }}{% endif %}"
-            }
+            "coding": [
+              {
+                "system": "http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation",
+                "code": "A",
+                "display": "Abnormal"
+              }
+            ]
+          },
+          {% endif %}                
+          { 
+            "text": "{{ observation.Description | json_escape }}"
           }
         ],
-        "entry": [
-          {% for observation in result.Results %}
-          {% if observation.TypeName == "Result" %}
+        "referenceRange": [
           {
-            "resource": {
-              "resourceType": "Observation",
-              "id": "{{ observation.Id.Value }}",
-              "code": {
-                "text": "{{ observation.Name }}"
+            "text": "{{ observation.NormalRange }}"
+            {% comment %}
+              # Commented lines for check and review based on data
+              "low": {
+                  "value": {% if observation.NormalRangeLow %}{{ observation.NormalRangeLow }}{% else %}null{% endif %},
+                  "unit": "{% if observation.Measurement.Units %}{{ observation.Measurement.Units }}{% endif %}",
+                  "system": "{{ observation.Measurement.MeasurementSystem }}",
+                  "code": "{{ observation.Measurement.Value }}"
               },
-              "subject": {
-                "reference": "Patient/{{ result.Results[0].ProviderId.Value }}"
-              },
-              "valueQuantity": {
-                "value": {% if observation.Measurement.HasNumericValue %}{{ observation.Measurement.NumericValue }}{% else %}null{% endif %},
-                "unit": "{% if observation.Measurement.Units %}{{ observation.Measurement.Units }}{% else %}see details{% endif %}",
+              "high": {
+                "value": {% if observation.NormalRangeHigh %}{{ observation.NormalRangeHigh }}{% else %}null{% endif %},
+                "unit": "{% if observation.Measurement.Units %}{{ observation.Measurement.Units }}{% endif %}",
                 "system": "{{ observation.Measurement.MeasurementSystem }}",
                 "code": "{{ observation.Measurement.Value }}"
-              },
-              "interpretation": [
-                {% if observation.IsAbnormal %}
-                {
-                  "coding": [
-                    {
-                      "system": "http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation",
-                      "code": "A",
-                      "display": "Abnormal"
-                    }
-                  ]
-                },
-                {% endif %}                
-                { 
-                  "text": "{{ observation.Description | json_escape }}"
-                }
-              ],
-              "referenceRange": [
-                {
-                  "text": "{{ observation.NormalRange }}"
-                  {% comment %}
-                    # Commented lines for check and review based on data
-                    "low": {
-                        "value": {% if observation.NormalRangeLow %}{{ observation.NormalRangeLow }}{% else %}null{% endif %},
-                        "unit": "{% if observation.Measurement.Units %}{{ observation.Measurement.Units }}{% endif %}",
-                        "system": "{{ observation.Measurement.MeasurementSystem }}",
-                        "code": "{{ observation.Measurement.Value }}"
-                    },
-                    "high": {
-                      "value": {% if observation.NormalRangeHigh %}{{ observation.NormalRangeHigh }}{% else %}null{% endif %},
-                      "unit": "{% if observation.Measurement.Units %}{{ observation.Measurement.Units }}{% endif %}",
-                      "system": "{{ observation.Measurement.MeasurementSystem }}",
-                      "code": "{{ observation.Measurement.Value }}"
-                    }
-                  {% endcomment %}  
-                }
-              ],             
-              "basedOn": [
-                {
-                  "reference": "ServiceRequest/{{ result.Id.Value }}"
-               }
-              ]
-            }
-          }{% unless forloop.last %},{% endunless %}
-          {% endif %}
-          {% endfor %}
+              }
+            {% endcomment %}  
+          }
+        ],             
+        "basedOn": [
+          {
+            "reference": "ServiceRequest/{{ result.Id.Value }}"
+          }
         ]
       }
     }{% unless forloop.last %},{% endunless %}
     {% endif %}
+    {% endfor %}
+    {% unless forloop.last %},{% endunless %}
+    {% endif %}
+    {% unless forloop.last %},{% endunless %}
     {% endfor %}
   ]
 }
